// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Manifest examples adaptive: .wrap { @include adaptive(16px); } 1`] = `
".wrap {
  margin: 0 auto;
}
@media (min-width: 576px) {
  .wrap {
    max-width: calc(576px - 16px * 2);
  }
}
@media (min-width: 768px) {
  .wrap {
    max-width: calc(768px - 16px * 2);
  }
}
@media (min-width: 992px) {
  .wrap {
    max-width: calc(992px - 16px * 2);
  }
}
@media (min-width: 1200px) {
  .wrap {
    max-width: calc(1200px - 16px * 2);
  }
}"
`;

exports[`Manifest examples adaptive: .wrap { @include adaptive; } 1`] = `
".wrap {
  margin: 0 auto;
}
@media (min-width: 576px) {
  .wrap {
    max-width: calc(576px - 30px * 2);
  }
}
@media (min-width: 768px) {
  .wrap {
    max-width: calc(768px - 30px * 2);
  }
}
@media (min-width: 992px) {
  .wrap {
    max-width: calc(992px - 30px * 2);
  }
}
@media (min-width: 1200px) {
  .wrap {
    max-width: calc(1200px - 30px * 2);
  }
}"
`;

exports[`Manifest examples after: .a { @include after { content: "x"; } } 1`] = `
":where(.a)::after {
  content: "";
}
.a::after {
  content: "x";
}"
`;

exports[`Manifest examples after: .a { @include after("data-label") { color: red; } } 1`] = `
".a::after {
  content: attr(data-label);
  color: red;
}"
`;

exports[`Manifest examples after: .a { @include after("→") { color: red; } } 1`] = `
"@charset "UTF-8";
.a::after {
  content: "→";
  color: red;
}"
`;

exports[`Manifest examples after: .a { @include after(attr(data-label)) { color: red; } } 1`] = `
".a::after {
  content: attr(data-label);
  color: red;
}"
`;

exports[`Manifest examples after: .a { @include after(var(--label)) { color: red; } } 1`] = `
".a::after {
  content: var(--label);
  color: red;
}"
`;

exports[`Manifest examples after: .badge { @include after { display: block; width: 8px; height: 8px; bor 1`] = `
":where(.badge)::after {
  content: "";
}
.badge::after {
  display: block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: red;
}"
`;

exports[`Manifest examples all-buttons: @include all-buttons { cursor: pointer; } 1`] = `
"button, [type=button], [type=reset], [type=submit] {
  cursor: pointer;
}"
`;

exports[`Manifest examples all-buttons: @include all-buttons("hover") { opacity: 0.8; } 1`] = `
"button:hover, [type=button]:hover, [type=reset]:hover, [type=submit]:hover {
  opacity: 0.8;
}"
`;

exports[`Manifest examples all-text-inputs: .search-bar { @include all-text-inputs { border: 0; } } 1`] = `
".search-bar :where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]), .search-bar textarea {
  border: 0;
}"
`;

exports[`Manifest examples all-text-inputs: @include all-text-inputs { border: 1px solid; } 1`] = `
":where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]), textarea {
  border: 1px solid;
}"
`;

exports[`Manifest examples all-text-inputs: @include all-text-inputs("focus") { outline: 2px solid; } 1`] = `
":where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]):focus, textarea:focus {
  outline: 2px solid;
}"
`;

exports[`Manifest examples all-text-inputs: @include all-text-inputs("focus-visible") { outline: 2px solid; } 1`] = `
":where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]):focus-visible, textarea:focus-visible {
  outline: 2px solid;
}"
`;

exports[`Manifest examples all-text-inputs: @include all-text-inputs("user-invalid") { border-color: crimson; } 1`] = `
":where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]):user-invalid, textarea:user-invalid {
  border-color: crimson;
}"
`;

exports[`Manifest examples antialias: .a { @include antialias("only"); } 1`] = `
".a, .a::before, .a::after {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}"
`;

exports[`Manifest examples antialias: @include antialias; 1`] = `
"*,
*::before,
*::after {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}"
`;

exports[`Manifest examples aspect-ratio: .a { @include aspect-ratio(var(--ratio)); } 1`] = `
".a {
  display: block;
  width: 100%;
  aspect-ratio: var(--ratio);
  border: 0;
  object-fit: cover;
}
:where(.a) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .default { @include aspect-ratio; } 1`] = `
".default {
  display: block;
  width: 100%;
  aspect-ratio: 16 / 9;
  border: 0;
  object-fit: cover;
}
:where(.default) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .plain { @include aspect-ratio(1.5, null); } 1`] = `
".plain {
  display: block;
  width: 100%;
  aspect-ratio: 1.5;
  border: 0;
}
:where(.plain) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .thumb { @include aspect-ratio("16:9"); } 1`] = `
".thumb {
  display: block;
  width: 100%;
  aspect-ratio: 16 / 9;
  border: 0;
  object-fit: cover;
}
:where(.thumb) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .tile { @include aspect-ratio("1:1", contain); } 1`] = `
".tile {
  display: block;
  width: 100%;
  aspect-ratio: 1 / 1;
  border: 0;
  object-fit: contain;
}
:where(.tile) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .video { @include aspect-ratio("16/9"); } 1`] = `
".video {
  display: block;
  width: 100%;
  aspect-ratio: 16 / 9;
  border: 0;
  object-fit: cover;
}
:where(.video) {
  height: auto;
}"
`;

exports[`Manifest examples background-dots: .a { @include background-dots(red); } 1`] = `
".a {
  background-image: radial-gradient(red 1em, transparent 0), radial-gradient(red 1em, transparent 0);
  background-position: 2.5em 2.5em, 10em 10em;
  background-size: 5em 5em;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-dots: .a { @include background-dots(red, $image: var(--photo)); } 1`] = `
".a {
  background-image: radial-gradient(red 1em, transparent 0), radial-gradient(red 1em, transparent 0);
  background-position: 2.5em 2.5em, 10em 10em;
  background-size: 5em 5em;
  background-repeat: repeat;
  position: relative;
}
.a::before {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-image: var(--photo);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  z-index: -1;
}"
`;

exports[`Manifest examples background-dots: .a { @include background-dots(red, 1em, 5em, false); } 1`] = `
".a {
  background-image: radial-gradient(red 1em, transparent 0);
  background-position: 2.5em 2.5em;
  background-size: 5em 5em;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-dots: .a { @include background-dots(red, clamp(2px, 0.5vw, 6px)); } 1`] = `
".a {
  background-image: radial-gradient(red clamp(2px, 0.5vw, 6px), transparent 0), radial-gradient(red clamp(2px, 0.5vw, 6px), transparent 0);
  background-position: calc(clamp(2px, 0.5vw, 6px) * 5 / 2) calc(clamp(2px, 0.5vw, 6px) * 5 / 2), calc(clamp(2px, 0.5vw, 6px) * 5 * 2) calc(clamp(2px, 0.5vw, 6px) * 5 * 2);
  background-size: calc(clamp(2px, 0.5vw, 6px) * 5) calc(clamp(2px, 0.5vw, 6px) * 5);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-dots: .a { @include background-dots(red, var(--dot), calc(var(--dot) * 6));  1`] = `
".a {
  background-image: radial-gradient(red var(--dot), transparent 0), radial-gradient(red var(--dot), transparent 0);
  background-position: calc(var(--dot) * 6 / 2) calc(var(--dot) * 6 / 2), calc(var(--dot) * 6 * 2) calc(var(--dot) * 6 * 2);
  background-size: calc(var(--dot) * 6) calc(var(--dot) * 6);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-dots: .a { @include background-dots; } 1`] = `
".a {
  background-image: radial-gradient(rgba(0, 0, 0, 0.1) 1em, transparent 0), radial-gradient(rgba(0, 0, 0, 0.1) 1em, transparent 0);
  background-position: 2.5em 2.5em, 10em 10em;
  background-size: 5em 5em;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image("/img/a.png"); } 1`] = `
".a {
  background-image: url("/img/a.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image("/img/a.png", (red, blue), "top"); } 1`] = `
".a {
  background-image: linear-gradient(to top, red, blue), url("/img/a.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image("/img/a.png", rgba(0,0,0,0.5)); } 1`] = `
".a {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/a.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image(image-set("/img/a.png" 1x, "/img/a@2x.p 1`] = `
".a {
  background-image: image-set("/img/a.png" 1x, "/img/a@2x.png" 2x);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image(var(--hero), rgba(0,0,0,0.5)); } 1`] = `
".a {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), var(--hero);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-stripes: .a { @include background-stripes(red blue, var(--stripe)); } 1`] = `
".a {
  background-image: repeating-linear-gradient(-45deg, red calc(var(--stripe) * 1 - var(--stripe)), red calc(var(--stripe) * 1), blue calc(var(--stripe) * 2 - var(--stripe)), blue calc(var(--stripe) * 2));
}"
`;

exports[`Manifest examples background-stripes: .a { @include background-stripes(red, 2em, -30deg); } 1`] = `
".a {
  background-image: repeating-linear-gradient(-30deg, red 0, red 2em, transparent 2em, transparent 4em);
}"
`;

exports[`Manifest examples background-stripes: .a { @include background-stripes(red, 2em, -30deg, var(--photo)); } 1`] = `
".a {
  background-image: repeating-linear-gradient(-30deg, red 0, red 2em, transparent 2em, transparent 4em), var(--photo);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-stripes: .a { @include background-stripes; } 1`] = `
".a {
  background-image: repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0.1) 0, rgba(0, 0, 0, 0.1) 1em, transparent 1em, transparent 2em);
}"
`;

exports[`Manifest examples before: .a { @include before("data-label") { color: red; } } 1`] = `
".a::before {
  content: attr(data-label);
  color: red;
}"
`;

exports[`Manifest examples before: .a { @include before("→") { color: red; } } 1`] = `
"@charset "UTF-8";
.a::before {
  content: "→";
  color: red;
}"
`;

exports[`Manifest examples before: .a { @include before(var(--label)) { color: red; } } 1`] = `
".a::before {
  content: var(--label);
  color: red;
}"
`;

exports[`Manifest examples before: .badge { @include before { display: block; width: 8px; height: 8px; bo 1`] = `
":where(.badge)::before {
  content: "";
}
.badge::before {
  display: block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: red;
}"
`;

exports[`Manifest examples border-box: .a { @include border-box("only"); } 1`] = `
".a, .a::before, .a::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples border-box: @include border-box; 1`] = `
"*,
*::before,
*::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples border-radius: .a { @include border-radius("top", 8px); } 1`] = `
".a {
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}"
`;

exports[`Manifest examples border-radius: .a { @include border-radius(1px, 2px, 3px, 4px); } 1`] = `
".a {
  border-top-left-radius: 1px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 4px;
}"
`;

exports[`Manifest examples border-radius: .a { @include border-radius(8px); } 1`] = `
".a {
  border-radius: 8px;
}"
`;

exports[`Manifest examples border-radius: .bubble { @include border-radius("end-end", 12px); } 1`] = `
".bubble {
  border-end-end-radius: 12px;
}"
`;

exports[`Manifest examples border-radius: .tab { @include border-radius("inline-start", 8px); } 1`] = `
".tab {
  border-start-start-radius: 8px;
  border-end-start-radius: 8px;
}"
`;

exports[`Manifest examples brand-logo: .logo { @include brand-logo(120px, 40px, "/img/logo.svg"); } 1`] = `
".logo {
  display: inline-block;
  position: relative;
  width: 120px;
  height: 40px;
  background-image: url("/img/logo.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 100%;
}
.logo a {
  display: block;
  width: 1px;
  height: 1px;
  overflow: hidden;
  text-indent: 100%;
}
.logo a::after {
  content: "";
  position: absolute;
  pointer-events: auto;
  background-color: rgba(0, 0, 0, 0);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples brand-logo: .logo { @include brand-logo(120px, 40px, var(--logo)); } 1`] = `
".logo {
  display: inline-block;
  position: relative;
  width: 120px;
  height: 40px;
  background-image: var(--logo);
  background-position: center;
  background-repeat: no-repeat;
  background-size: 100%;
}
.logo a {
  display: block;
  width: 1px;
  height: 1px;
  overflow: hidden;
  text-indent: 100%;
}
.logo a::after {
  content: "";
  position: absolute;
  pointer-events: auto;
  background-color: rgba(0, 0, 0, 0);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples breakpoint: .a { @include breakpoint("between", "medium" "large") { color: red; }  1`] = `
"@media (min-width: 768px) and (max-width: 991.98px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest examples breakpoint: .a { @include breakpoint("max", "medium") { color: red; } } 1`] = `
"@media (max-width: 767.98px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest examples breakpoint: .a { @include breakpoint("min", "medium") { color: red; } } 1`] = `
"@media (min-width: 768px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest examples breakpoint: .a { @include breakpoint("only", "medium") { color: red; } } 1`] = `
"@media (width: 768px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest examples breakpointer: .a { @include breakpointer; } 1`] = `
"@media (min-width: 0) {
  .a::before {
    content: "xsmall";
  }
}
@media (min-width: 576px) {
  .a::before {
    content: "small";
  }
}
@media (min-width: 768px) {
  .a::before {
    content: "medium";
  }
}
@media (min-width: 992px) {
  .a::before {
    content: "large";
  }
}
@media (min-width: 1200px) {
  .a::before {
    content: "xlarge";
  }
}"
`;

exports[`Manifest examples breakpointer: @include breakpointer; 1`] = `
"@media (min-width: 0) {
  body::before {
    content: "xsmall";
  }
}
@media (min-width: 576px) {
  body::before {
    content: "small";
  }
}
@media (min-width: 768px) {
  body::before {
    content: "medium";
  }
}
@media (min-width: 992px) {
  body::before {
    content: "large";
  }
}
@media (min-width: 1200px) {
  body::before {
    content: "xlarge";
  }
}"
`;

exports[`Manifest examples center: .bar { @include center("horizontal"); } 1`] = `
".bar {
  left: 50%;
  transform: translateX(-50%);
}"
`;

exports[`Manifest examples center: .modal { @include center; } 1`] = `
".modal {
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
}"
`;

exports[`Manifest examples circle: .dot { @include circle(24px); } 1`] = `
".dot {
  width: 24px;
  height: 24px;
  display: inline-block;
  border-radius: 100%;
}"
`;

exports[`Manifest examples clearUnit: .a { line-height: clearUnit(24px); } 1`] = `
".a {
  line-height: 24;
}"
`;

exports[`Manifest examples clearWhitespace: .a { content: clearWhitespace("a b c"); } 1`] = `
".a {
  content: "abc";
}"
`;

exports[`Manifest examples clearfix: .row { @include clearfix; } 1`] = `
".row::after {
  content: "";
  display: block;
  clear: both;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(#{3}, 0); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 0px;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (3 - 1) * 0px) / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(3); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 0;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc(100% / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(3, 20px); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (3 - 1) * 20px) / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(3, 20px, true); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 1;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (3 - 1) * 20px) / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(3, var(--gap)); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (3 - 1) * var(--gap)) / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(var(--cols)); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 0;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc(100% / var(--cols));
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(var(--cols), 1.5rem); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (var(--cols) - 1) * 1.5rem) / var(--cols));
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples container: .card { @include container("card"); } 1`] = `
".card {
  container-type: inline-size;
  container-name: card;
}"
`;

exports[`Manifest examples container: .panel { @include container(null, size); } 1`] = `
".panel {
  container-type: size;
}"
`;

exports[`Manifest examples container: .panel { @include container; } 1`] = `
".panel {
  container-type: inline-size;
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("between", 300px 500px) { color: red 1`] = `
"@container (min-width: 300px) and (max-width: 500px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("max", 399px) { font-size: 1rem; } } 1`] = `
"@container (max-width: 399px) {
  .title {
    font-size: 1rem;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("min", "medium") { color: red; } } 1`] = `
"@container (min-width: 768px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("min", 400px) { font-size: 2rem; } } 1`] = `
"@container (min-width: 400px) {
  .title {
    font-size: 2rem;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("min", 400px, $name: "card") { color 1`] = `
"@container card (min-width: 400px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("only", 400px) { color: red; } } 1`] = `
"@container (width: 400px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("small", "medium") { color: red; } } 1`] = `
"@container (min-width: 576px) and (width < 768px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query(300px, 500px) { color: red; } } 1`] = `
"@container (min-width: 300px) and (max-width: 500px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples convertToEm: .a { margin: convertToEm(24px); } 1`] = `
".a {
  margin: 1.5em;
}"
`;

exports[`Manifest examples convertToNumber: .a { z-index: convertToNumber("42"); } 1`] = `
".a {
  z-index: 42;
}"
`;

exports[`Manifest examples counter: .chapter-2 { @include counter("Step", decimal, $start: 4); } 1`] = `
".chapter-2 {
  counter-reset: glsCounter;
}
.chapter-2 > * {
  counter-increment: glsCounter;
}
.chapter-2 > *:first-child {
  counter-set: glsCounter 4;
}
.chapter-2 > *::before {
  content: "Step" counter(glsCounter, decimal);
}"
`;

exports[`Manifest examples counter: .list { @include counter("(", "decimal", ")"); } 1`] = `
".list {
  counter-reset: glsCounter;
}
.list > * {
  counter-increment: glsCounter;
}
.list > *::before {
  content: "(" counter(glsCounter, decimal)  ")";
}"
`;

exports[`Manifest examples counter: .list { @include counter("."); } 1`] = `
".list {
  counter-reset: glsCounter;
}
.list > * {
  counter-increment: glsCounter;
}
.list > *::before {
  content: counter(glsCounter)  ".";
}"
`;

exports[`Manifest examples counter: .list { @include counter("decimal"); } 1`] = `
".list {
  counter-reset: glsCounter;
}
.list > * {
  counter-increment: glsCounter;
}
.list > *::before {
  content: counter(glsCounter, decimal);
}"
`;

exports[`Manifest examples counter: .list { @include counter(decimal-leading-zero, $name: tips); } 1`] = `
".list {
  counter-reset: tips;
}
.list > * {
  counter-increment: tips;
}
.list > *::before {
  content: counter(tips, decimal-leading-zero);
}"
`;

exports[`Manifest examples counter: .list { @include counter(var(--prefix), "decimal"); } 1`] = `
".list {
  counter-reset: glsCounter;
}
.list > * {
  counter-increment: glsCounter;
}
.list > *::before {
  content: var(--prefix) counter(glsCounter, decimal);
}"
`;

exports[`Manifest examples counter: .list-2 { @include counter(decimal-leading-zero, $continue: tips); } 1`] = `
".list-2 > * {
  counter-increment: tips;
}
.list-2 > *::before {
  content: counter(tips, decimal-leading-zero);
}"
`;

exports[`Manifest examples counter: .steps { @include counter(decimal, $name: steps, $items: ".step") { fo 1`] = `
".steps {
  counter-reset: steps;
}
.steps > .step {
  counter-increment: steps;
}
.steps > .step::before {
  content: counter(steps, decimal);
  font-weight: 700;
}"
`;

exports[`Manifest examples ellipsis: .a { @include ellipsis(200px); } 1`] = `
".a {
  display: inline-block;
  max-width: 200px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  word-wrap: normal;
}"
`;

exports[`Manifest examples ellipsis: .a { @include ellipsis; } 1`] = `
".a {
  display: inline-block;
  max-width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  word-wrap: normal;
}"
`;

exports[`Manifest examples escape-to-parent: .a { @include escape-to-parent(".theme-dark") { color: white; } } 1`] = `
".theme-dark.a {
  color: white;
}"
`;

exports[`Manifest examples except: .a { @include except("first") { margin: 0; } } 1`] = `
".a:not(:first-of-type) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(1, 3) { margin: 0; } } 1`] = `
".a:not(:nth-of-type(1)):not(:nth-of-type(3)) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(2) { margin: 0; } } 1`] = `
".a:not(:nth-of-type(2)) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(3n) { margin: 0; } } 1`] = `
".a:not(:nth-of-type(3n)) {
  margin: 0;
}"
`;

exports[`Manifest examples fillNulls: .a { margin: fillNulls(1px null 3px null, space); } 1`] = `
".a {
  margin: 1px 0 3px 0;
}"
`;

exports[`Manifest examples fluid: .section { padding: fluid(16px, 64px) fluid(8px, 40px); } 1`] = `
".section {
  padding: clamp(1rem, 0rem + 5vw, 4rem) clamp(0.5rem, -0.1667rem + 3.3333vw, 2.5rem);
}"
`;

exports[`Manifest examples fluid: .stack { gap: fluid(0.5rem, 2rem); } 1`] = `
".stack {
  gap: clamp(0.5rem, 0rem + 2.5vw, 2rem);
}"
`;

exports[`Manifest examples fluid: .title { font-size: fluid(1rem, 3rem, 320px, 1200px); } 1`] = `
".title {
  font-size: clamp(1rem, 0.2727rem + 3.6364vw, 3rem);
}"
`;

exports[`Manifest examples fluid: .title { font-size: fluid(24px, 48px); } 1`] = `
".title {
  font-size: clamp(1.5rem, 1rem + 2.5vw, 3rem);
}"
`;

exports[`Manifest examples focus-ring: .button { @include focus-ring; } 1`] = `
".button:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: 2px;
}"
`;

exports[`Manifest examples focus-ring: .card-link { @include focus-ring(3px, 4px, var(--focus)); } 1`] = `
".card-link:focus-visible {
  outline: 3px solid var(--focus);
  outline-offset: 4px;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter"); 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2");
  font-style: normal;
  font-weight: 400;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter", "italic", $font-weight: "b 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2");
  font-style: italic;
  font-weight: bold;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter", auto, "100 900", $file-for 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2");
  font-style: auto;
  font-weight: 100 900;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter", italic, 700, woff2 woff); 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2"), url("/fonts/inter.woff") format("woff");
  font-style: italic;
  font-weight: 700;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter", oblique 10deg 20deg, $font 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2");
  font-style: oblique 10deg 20deg;
  font-weight: 450.5;
}"
`;

exports[`Manifest examples font-face: @include font-face("Readex Pro", "/fonts/readex", $font-weight: 160 70 1`] = `
"@font-face {
  font-family: "Readex Pro";
  src: url("/fonts/readex.woff2") format("woff2");
  font-style: normal;
  font-weight: 160 700;
  font-display: swap;
}"
`;

exports[`Manifest examples fontSizer: .a { font-size: fontSizer(16px, 1.5); } 1`] = `
".a {
  font-size: 24px;
}"
`;

exports[`Manifest examples fontSource: .a { content: "#{fontSource("Inter", "/fonts/inter", woff2)}"; } 1`] = `
".a {
  content: 'url("/fonts/inter.woff2") format("woff2")';
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((black 0 25%, white 0 50%), conic, $repeating:  1`] = `
".a {
  background-image: repeating-conic-gradient(black 0 25%, white 0 50%);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((blue, yellow), $direction: right, $in: oklab); 1`] = `
".a {
  background-image: linear-gradient(to right, blue, yellow);
  background-image: linear-gradient(to right in oklab, blue, yellow);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((red, blue)); } 1`] = `
".a {
  background-image: linear-gradient(red, blue);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((red, blue), $direction: "top-right"); } 1`] = `
".a {
  background-image: linear-gradient(to top right, red, blue);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((red, blue), radial, $shape: circle, $position: 1`] = `
".a {
  background-image: radial-gradient(circle at top left, red, blue);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((teal 0 40%, purple 40% 75%, coral 75% 100%), c 1`] = `
".a {
  background-image: conic-gradient(teal 0 40%, purple 40% 75%, coral 75% 100%);
}"
`;

exports[`Manifest examples gradientValue: .a { background-image: gradientValue((rgba(0, 0, 0, 0.75), transparent 1`] = `
".a {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.75), transparent), url("/img/hero.jpg");
}"
`;

exports[`Manifest examples gradientValue: .a { border: 4px solid; border-image: gradientValue((red, blue), $dire 1`] = `
".a {
  border: 4px solid;
  border-image: linear-gradient(to right, red, blue) 1;
}"
`;

exports[`Manifest examples gradientValue: .a { mask-image: gradientValue((#000 60%, transparent)); } 1`] = `
".a {
  mask-image: linear-gradient(#000 60%, transparent);
}"
`;

exports[`Manifest examples hide: .icon-button-label { @include hide; } 1`] = `
".icon-button-label {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(100%);
  white-space: nowrap;
}"
`;

exports[`Manifest examples hide: .skip-link { position: fixed; top: 1rem; left: 1rem; padding: 0.75rem  1`] = `
".skip-link {
  position: fixed;
  top: 1rem;
  left: 1rem;
  padding: 0.75rem 1rem;
}
.skip-link:not(:focus-within):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(100%);
  white-space: nowrap;
}"
`;

exports[`Manifest examples hide: .skip-links { @include hide(focusable); } 1`] = `
".skip-links:not(:focus-within):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(100%);
  white-space: nowrap;
}"
`;

exports[`Manifest examples hide: @media (max-width: 599.98px) { .nav-label { @include hide; } } 1`] = `
"@media (max-width: 599.98px) {
  .nav-label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    border: 0;
    overflow: hidden;
    clip: rect(1px, 1px, 1px, 1px);
    clip-path: inset(100%);
    white-space: nowrap;
  }
}"
`;

exports[`Manifest examples isColor: .a { color: isColor(red); } 1`] = `
".a {
  color: red;
}"
`;

exports[`Manifest examples isGutter: .a { --x: #{isGutter(20px)}; } 1`] = `
".a {
  --x: true;
}"
`;

exports[`Manifest examples isGutter: .a { --x: #{isGutter(var(--gap))}; } 1`] = `
".a {
  --x: true;
}"
`;

exports[`Manifest examples isNumber: .a { z-index: isNumber(5); } 1`] = `
".a {
  z-index: 5;
}"
`;

exports[`Manifest examples isTime: .a { animation-duration: isTime(0.4s); } 1`] = `
".a {
  animation-duration: 0.4s;
}"
`;

exports[`Manifest examples line-clamp: .a { @include line-clamp(var(--lines)); } 1`] = `
".a {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: var(--lines);
  line-clamp: var(--lines);
  overflow: hidden;
}"
`;

exports[`Manifest examples line-clamp: .default { @include line-clamp; } 1`] = `
".default {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  overflow: hidden;
}"
`;

exports[`Manifest examples line-clamp: .excerpt { @include line-clamp(3); } 1`] = `
".excerpt {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  overflow: hidden;
}"
`;

exports[`Manifest examples line-clamp: .full { @include line-clamp(none); } 1`] = `
".full {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: none;
  line-clamp: none;
  overflow: hidden;
}"
`;

exports[`Manifest examples line-clamp: .title { @include line-clamp(2); } 1`] = `
".title {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  overflow: hidden;
}"
`;

exports[`Manifest examples loadify: @include loadify(init); .a { @include loadify; } 1`] = `
"@keyframes loadify {
  to {
    opacity: 1;
    visibility: visible;
    backface-visibility: visible;
  }
}
.a {
  opacity: 0;
  visibility: hidden;
  backface-visibility: hidden;
  animation-name: loadify;
  animation-fill-mode: forwards;
}
@media (prefers-reduced-motion: reduce) {
  .a {
    opacity: 1;
    visibility: visible;
    backface-visibility: visible;
    animation: none;
  }
}

.a {
  animation-delay: 0.2s;
  animation-duration: 0.5s;
}"
`;

exports[`Manifest examples loadify: @include loadify; .a { @include loadify(0.4s, 1s); } 1`] = `
"@keyframes loadify {
  to {
    opacity: 1;
    visibility: visible;
    backface-visibility: visible;
  }
}
.a {
  opacity: 0;
  visibility: hidden;
  backface-visibility: hidden;
  animation-name: loadify;
  animation-fill-mode: forwards;
}
@media (prefers-reduced-motion: reduce) {
  .a {
    opacity: 1;
    visibility: visible;
    backface-visibility: visible;
    animation: none;
  }
}

.a {
  animation-delay: 0.4s;
  animation-duration: 1s;
}"
`;

exports[`Manifest examples mapDeepGet: .a { height: mapDeepGet($map-for-tablets, "iPadPro", "height"); } 1`] = `
".a {
  height: 1366px;
}"
`;

exports[`Manifest examples motion-safe: .card { @include motion-safe { transition: transform 0.2s ease; } } 1`] = `
"@media (prefers-reduced-motion: no-preference) {
  .card {
    transition: transform 0.2s ease;
  }
}"
`;

exports[`Manifest examples motion-safe: @include motion-safe { .spinner { animation: spin 1s linear infinite;  1`] = `
"@media (prefers-reduced-motion: no-preference) {
  .spinner {
    animation: spin 1s linear infinite;
  }
}"
`;

exports[`Manifest examples only: .a { @include only("first") { margin: 0; } } 1`] = `
".a:first-of-type {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(-1) { margin: 0; } } 1`] = `
".a:nth-last-of-type(1) {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(1, 3) { margin: 0; } } 1`] = `
".a:nth-of-type(1), .a:nth-of-type(3) {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(3n) { margin: 0; } } 1`] = `
".a:nth-of-type(3n) {
  margin: 0;
}"
`;

exports[`Manifest examples pixelify: .a { width: pixelify(24); } 1`] = `
".a {
  width: 24px;
}"
`;

exports[`Manifest examples placeholder: .field { @include placeholder { color: gray; } } 1`] = `
".field::-webkit-input-placeholder {
  color: gray;
}
.field::-moz-placeholder {
  color: gray;
}
.field:-ms-input-placeholder {
  color: gray;
}
.field:-moz-placeholder {
  color: gray;
}
.field::placeholder {
  color: gray;
}"
`;

exports[`Manifest examples placeholder-shown: .field { @include placeholder-shown { border-color: gray; } } 1`] = `
".field:placeholder-shown {
  border-color: gray;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, #{16}px AUTO revert-layer); } 1`] = `
".a {
  position: absolute;
  top: 16px;
  right: AUTO;
  bottom: revert-layer;
  left: AUTO;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, 0 null null 0); } 1`] = `
".a {
  position: absolute;
  top: 0;
  left: 0;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, 0); } 1`] = `
".a {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, 0, $logical: null); } 1`] = `
".a {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, null 16px 16px 16px); } 1`] = `
".a {
  position: absolute;
  right: 16px;
  bottom: 16px;
  left: 16px;
}"
`;

exports[`Manifest examples position: .a { @include position(fixed, 0 10px); } 1`] = `
".a {
  position: fixed;
  top: 0;
  right: 10px;
  bottom: 0;
  left: 10px;
}"
`;

exports[`Manifest examples position: .badge { @include position(absolute, 0 auto auto 1rem, $logical: true) 1`] = `
".badge {
  position: absolute;
  inset-block-start: 0;
  inset-inline-end: auto;
  inset-block-end: auto;
  inset-inline-start: 1rem;
}"
`;

exports[`Manifest examples position: .tip { @include position(absolute, anchor(bottom) null null anchor(lef 1`] = `
".tip {
  position: absolute;
  top: anchor(bottom);
  left: anchor(left);
}"
`;

exports[`Manifest examples pseudoSelector: .a { content: "#{pseudoSelector(("button", "a"), "hover")}"; } 1`] = `
".a {
  content: "button:hover, a:hover";
}"
`;

exports[`Manifest examples remify: .a { font-size: remify(24px); } 1`] = `
".a {
  font-size: 1.5rem;
}"
`;

exports[`Manifest examples remove: .a { @include remove("max", "medium"); } 1`] = `
"@media (max-width: 767.98px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples remove: .a { @include remove("min", "medium"); } 1`] = `
"@media (min-width: 768px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples remove: .a { @include remove("only", "medium"); } 1`] = `
"@media (width: 768px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples remove: .a { @include remove("small", "large"); } 1`] = `
"@media (min-width: 576px) and (max-width: 991.98px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples remove: .a { @include remove; } 1`] = `
".a {
  display: none;
}"
`;

exports[`Manifest examples reset-css: @include reset-css; 1`] = `
"html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, main, nav, section {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}"
`;

exports[`Manifest examples reset-figure: figure { @include reset-figure; } 1`] = `
"figure {
  margin: 0;
}
figure img {
  display: block;
  width: 100%;
}"
`;

exports[`Manifest examples resizable: .a { @include resizable(vertical, scroll); } 1`] = `
".a {
  resize: vertical;
  overflow: scroll;
  max-width: 100%;
}"
`;

exports[`Manifest examples resizable: .a { @include resizable; } 1`] = `
".a {
  resize: both;
  overflow: auto;
  max-width: 100%;
}"
`;

exports[`Manifest examples responsive-image: img { @include responsive-image; } 1`] = `
"img {
  display: block;
  width: 100%;
}"
`;

exports[`Manifest examples scissors: .a { @include scissors(4px 8px 12px 16px); } 1`] = `
".a {
  clip-path: polygon(0 4px, 4px 0, calc(100% - 8px) 0, 100% 8px, 100% calc(100% - 12px), calc(100% - 12px) 100%, 16px 100%, 0 calc(100% - 16px));
}"
`;

exports[`Manifest examples scissors: .a { @include scissors(12px); } 1`] = `
".a {
  clip-path: polygon(0 12px, 12px 0, calc(100% - 12px) 0, 100% 12px, 100% calc(100% - 12px), calc(100% - 12px) 100%, 12px 100%, 0 calc(100% - 12px));
}"
`;

exports[`Manifest examples screen-agent: .a { @include screen-agent("2x") { background-image: url("/img/a@2x.pn 1`] = `
"@media (min-resolution: 192dpi) {
  .a {
    background-image: url("/img/a@2x.png");
  }
}"
`;

exports[`Manifest examples shade: .a { color: shade(red, 20%); } 1`] = `
".a {
  color: #cc0000;
}"
`;

exports[`Manifest examples shorthandProperty: .a { margin: shorthandProperty(10px 20px); } 1`] = `
".a {
  margin: 10px 20px 10px 20px;
}"
`;

exports[`Manifest examples sizer: .a { @include sizer(40px); } 1`] = `
".a {
  width: 40px;
  height: 40px;
}"
`;

exports[`Manifest examples sizer: .a { @include sizer(120px, 40px); } 1`] = `
".a {
  width: 120px;
  height: 40px;
}"
`;

exports[`Manifest examples smartphone: .a { @include smartphone("iPhone11") { display: none; } } 1`] = `
"@media only screen and (device-width: 414px) and (device-height: 896px) and (orientation: portrait) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples smartphone: .a { @include smartphone("iPhone11", landscape) { display: none; } } 1`] = `
"@media only screen and (device-width: 896px) and (device-height: 414px) and (orientation: landscape) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite("/img/sprite.png"); } 1`] = `
".icon {
  display: inline-block;
  background-image: url("/img/sprite.png");
  background-repeat: no-repeat;
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite("/img/sprite.png", 0 -40px); } 1`] = `
".icon {
  display: inline-block;
  background-image: url("/img/sprite.png");
  background-position: 0 -40px;
  background-repeat: no-repeat;
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite(0 -40px); } 1`] = `
".icon {
  background-position: 0 -40px;
}"
`;

exports[`Manifest examples stretched-link: .card a { @include stretched-link("after"); } 1`] = `
".card a::after {
  content: "";
  position: absolute;
  pointer-events: auto;
  background-color: rgba(0, 0, 0, 0);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples stretched-link: .card a { @include stretched-link; } 1`] = `
".card a::before {
  content: "";
  position: absolute;
  pointer-events: auto;
  background-color: rgba(0, 0, 0, 0);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples tablet: .a { @include tablet("iPad", landscape) { display: none; } } 1`] = `
"@media only screen and (device-width: 1080px) and (device-height: 810px) and (orientation: landscape) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples tablet: .a { @include tablet("iPadPro") { display: none; } } 1`] = `
"@media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples text-gradient: .a { @include text-gradient((red, blue), $direction: top); } 1`] = `
".a {
  background: linear-gradient(to top, red, blue);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}"
`;

exports[`Manifest examples text-gradient: .a { @include text-gradient(blue yellow, $direction: right, $in: oklab 1`] = `
".a {
  background: linear-gradient(to right, blue, yellow);
  background: linear-gradient(to right in oklab, blue, yellow);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}"
`;

exports[`Manifest examples text-gradient: .a { @include text-gradient(red yellow lime cyan blue magenta red, con 1`] = `
".a {
  background: conic-gradient(red, yellow, lime, cyan, blue, magenta, red);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}"
`;

exports[`Manifest examples text-image: .a { @include text-image("/img/t.png"); } 1`] = `
".a {
  background-image: url("/img/t.png");
  background-size: cover;
  background-position: center;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}"
`;

exports[`Manifest examples text-image: .a { @include text-image(var(--texture)); } 1`] = `
".a {
  background-image: var(--texture);
  background-size: cover;
  background-position: center;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}"
`;

exports[`Manifest examples text-selection: .a { @include text-selection("only") { background: yellow; } } 1`] = `
".a::selection {
  background: yellow;
}"
`;

exports[`Manifest examples text-selection: @include text-selection { background: yellow; } 1`] = `
"::selection {
  background: yellow;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(30deg #5bc0bb 12px); } 1`] = `
".a {
  text-shadow: 6px -10.392px #5bc0bb;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(bottom rgb(0 0 0 / 0.3) 6px 4px); } 1`] = `
".a {
  text-shadow: 0 6px 4px rgba(0, 0, 0, 0.3);
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(bottom-right #5bc0bb 2rem true, $step: 0.125 1`] = `
".a {
  text-shadow: 0.0884rem 0.0884rem #5bc0bb, 0.1768rem 0.1768rem #5bc0bb, 0.2652rem 0.2652rem #5bc0bb, 0.3535rem 0.3535rem #5bc0bb, 0.4419rem 0.4419rem #5bc0bb, 0.5303rem 0.5303rem #5bc0bb, 0.6187rem 0.6187rem #5bc0bb, 0.7071rem 0.7071rem #5bc0bb, 0.7955rem 0.7955rem #5bc0bb, 0.8839rem 0.8839rem #5bc0bb, 0.9723rem 0.9723rem #5bc0bb, 1.0606rem 1.0606rem #5bc0bb, 1.149rem 1.149rem #5bc0bb, 1.2374rem 1.2374rem #5bc0bb, 1.3258rem 1.3258rem #5bc0bb, 1.4142rem 1.4142rem #5bc0bb;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(bottom-right #5bc0bb 24px true); } 1`] = `
".a {
  text-shadow: 0.7071px 0.7071px #5bc0bb, 1.4142px 1.4142px #5bc0bb, 2.1213px 2.1213px #5bc0bb, 2.8284px 2.8284px #5bc0bb, 3.5355px 3.5355px #5bc0bb, 4.2426px 4.2426px #5bc0bb, 4.9497px 4.9497px #5bc0bb, 5.6568px 5.6568px #5bc0bb, 6.3639px 6.3639px #5bc0bb, 7.071px 7.071px #5bc0bb, 7.7781px 7.7781px #5bc0bb, 8.4852px 8.4852px #5bc0bb, 9.1923px 9.1923px #5bc0bb, 9.8994px 9.8994px #5bc0bb, 10.6065px 10.6065px #5bc0bb, 11.3136px 11.3136px #5bc0bb, 12.0207px 12.0207px #5bc0bb, 12.7278px 12.7278px #5bc0bb, 13.4349px 13.4349px #5bc0bb, 14.142px 14.142px #5bc0bb, 14.8491px 14.8491px #5bc0bb, 15.5562px 15.5562px #5bc0bb, 16.2633px 16.2633px #5bc0bb, 16.9704px 16.9704px #5bc0bb;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(bottom-right rgb(0 0 0 / 0.35) 6px); } 1`] = `
".a {
  text-shadow: 4.2426px 4.2426px rgba(0, 0, 0, 0.35);
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(top crimson 4px, bottom gold 4px); } 1`] = `
".a {
  text-shadow: 0 -4px crimson, 0 4px gold;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(top var(--shadow-color) var(--shadow-size)); 1`] = `
".a {
  text-shadow: 0 calc(-1 * var(--shadow-size)) var(--shadow-color);
}"
`;

exports[`Manifest examples text-stroke: .a { @include text-stroke(black, transparent, red, 2px); } 1`] = `
".a {
  color: black;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-color: red;
  -webkit-text-stroke-width: 2px;
}"
`;

exports[`Manifest examples text-stroke: .a { @include text-stroke; } 1`] = `
".a {
  color: black;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-color: black;
  -webkit-text-stroke-width: 1px;
}"
`;

exports[`Manifest examples tint: .a { color: tint(red, 20%); } 1`] = `
".a {
  color: #ff3333;
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((1: 0.25rem, 2: 0.5rem, 4: 1rem), space); @inc 1`] = `
":root {
  --space-1: 0.25rem;
  --space-2: 0.5rem;
  --space-4: 1rem;
  --radius-md: 8px;
  --radius-full: 9999px;
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((bg: #fff, text: #111), color); } 1`] = `
":root {
  --color-bg: #fff;
  --color-text: #111;
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((blue-500: #3b82f6, blue-600: #2563eb)); } 1`] = `
":root {
  --blue-500: #3b82f6;
  --blue-600: #2563eb;
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((body: ("Readex Pro", sans-serif), label: "New 1`] = `
":root {
  --font-body: "Readex Pro", sans-serif;
  --font-label: "New";
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((md: 0 4px 12px rgba(24, 24, 27, 0.08)), shado 1`] = `
":root {
  --shadow-md: 0 4px 12px rgba(24, 24, 27, 0.08);
  --motion-fast: 150ms;
  --motion-ease: cubic-bezier(0.2, 0, 0, 1);
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((red: #ef4444, 500: #3b82f6), blue); } 1`] = `
":root {
  --blue-red: #ef4444;
  --blue-500: #3b82f6;
}"
`;

exports[`Manifest examples tokens: [data-theme="dark"] { @include tokens((bg: #09090b, accent: var(--blue 1`] = `
"[data-theme=dark] {
  --color-bg: #09090b;
  --color-accent: var(--blue-500);
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("bottom", currentColor, var(--caret-w) var( 1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: currentColor transparent transparent;
  border-width: var(--caret-h) calc(var(--caret-w) / 2) 0;
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("left", red); } 1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent red transparent transparent;
  border-width: 4px 10px 4px 0;
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("right", currentColor); } 1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent transparent transparent currentColor;
  border-width: 4px 0 4px 10px;
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("right", var(--accent), 6px 8px); } 1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent transparent transparent var(--accent);
  border-width: 4px 0 4px 6px;
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("top", color-mix(in srgb, red 50%, blue));  1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent transparent color-mix(in srgb, red 50%, blue);
  border-width: 0 5px 8px;
}"
`;

exports[`Manifest examples triangle: .caret { @include triangle("bottom", black, 10px 8px); } 1`] = `
".caret {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: black transparent transparent;
  border-width: 8px 5px 0;
}"
`;

exports[`Manifest examples triangle: .next { @include triangle("inline-end", currentColor, 8px 12px); } 1`] = `
".next {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent;
  border-inline-start-color: currentColor;
  border-block-width: 6px;
  border-inline-start-width: 8px;
  border-inline-end-width: 0;
}"
`;

exports[`Manifest examples triangle: .sort { @include triangle("block-start", currentColor); } 1`] = `
".sort {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent;
  border-block-end-color: currentColor;
  border-inline-width: 5px;
  border-block-start-width: 0;
  border-block-end-width: 8px;
}"
`;

exports[`Manifest examples validateBreakpoint: .a { width: validateBreakpoint("medium"); } 1`] = `
".a {
  width: 768px;
}"
`;

exports[`Manifest examples validateLength: .a { width: validateLength(20px); } 1`] = `
".a {
  width: 20px;
}"
`;

exports[`Manifest examples validateRatio: .a { aspect-ratio: validateRatio("16/9"); } 1`] = `
".a {
  aspect-ratio: 16 / 9;
}"
`;

exports[`Manifest examples validateRatio: .a { aspect-ratio: validateRatio(1.5); } 1`] = `
".a {
  aspect-ratio: 1.5;
}"
`;

exports[`Manifest examples validateRatio: .a { aspect-ratio: validateRatio(var(--ratio)); } 1`] = `
".a {
  aspect-ratio: var(--ratio);
}"
`;

exports[`Manifest examples validateScissors: .a { content: "#{validateScissors(12px)}"; } 1`] = `
".a {
  content: "12px";
}"
`;

exports[`Manifest warnings breakpoint warns: .a { @include breakpoint("medium") { color: red; } } 1`] = `
"@media (width: 768px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest warnings container-query warns: .title { @include container-query(400px) { color: red; } } 1`] = `
"@container (width: 400px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest warnings gradient warns: .a { @include gradient(red); } 1`] = `
".a {
  background-image: linear-gradient(red);
}"
`;

exports[`Manifest warnings gradientValue warns: .a { background-image: gradientValue(red); } 1`] = `
".a {
  background-image: linear-gradient(red);
}"
`;

exports[`Manifest warnings remove warns: .a { @include remove("medium"); } 1`] = `
"@media (width: 768px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest warnings text-gradient warns: .a { @include text-gradient(red); } 1`] = `
".a {
  background: linear-gradient(red);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}"
`;
